# PyCoin

./: .env exemple  .gitignore  README.md  app.py  install.bat  pyproject.toml  requirements.txt  test_mineracao_paralelo.py
app/: pycoin.py  transaction.py  wallet.py
install/: install.sh  install_to_rasp.sh
pycoin/: app.py  pycoin.py  schemas.py  settings.py  transaction.py  wallet.py
pycoin/blockchain/: block_utils.py  blockchain_manager.py  pycoin.py  tool_blockchain.py
pycoin/data-antigo/blockchain/: block.json
pycoin/data-antigo/nodes/: test_nodes.json
pycoin/data/blockchain/: test_block.json
pycoin/data/nodes/: nodes.json
pycoin/exceptions/: transaction_exceptions.py
pycoin/miner/: miner_manager.py
pycoin/routers/: miner.py  wallet.py
pycoin/settings/: config.py  settings.py
pycoin/utils/: file_initializers.py
tests/: conftest.py  test_blockchain.py  test_requests.py  test_tools_blockchain.py  test_wallet.py
tests/blockchain/: test_blockchain.py  test_tools_blockchain.py
tests/utils/: test_file_initializers.py
tests/wallet/: test_wallet.py
